--- a/main/main.html
+++ b/main/main.html
@@ -22,8 +22,8 @@
       </form>
     </div>
     <div class="nav_login">
-      <p><a href="../html/sign.html">회원가입</a></p>
-      <p><a href="../html/login.html">로그인</a></p>
+      <p><a href="../etc/sign.html">회원가입</a></p>
+      <p><a href="../etc/login.html">로그인</a></p>
     </div>
   </nav>
 
