--- a/etc/login.html
+++ b/etc/login.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/login.css">
+  <link rel="stylesheet" href="../etc/login.css">
   <title>login</title>
 </head>
 <body>
   <nav>
-    <a href="../html/romance.html"><img src="../img/logo.png" alt=""></a>
+    <a href="../main/main.html"><img src="../img/logo.png" alt=""></a>
   </nav>
   <div class="clear_box"></div>
   <div class="form">
@@ -22,7 +22,7 @@
         <input type="submit" value="로그인">
       </div>
       <div class="login_sign">
-        <input type="button" value="회원가입" onclick="location.href='../html/sign.html'">
+        <input type="button" value="회원가입" onclick="location.href='../etc/sign.html'">
       </div>    
     </form>
   </div>
