--- a/etc/sign.html
+++ b/etc/sign.html
@@ -5,12 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/5fc1f29f28.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="../css/sign.css">
+  <link rel="stylesheet" href="../etc/sign.css">
   <title>sign</title>
 </head>
 <body>
   <nav>
-    <a href="../html/romance.html"><img src="../img/logo.png" alt=""></a>
+    <a href="../main/main.html"><img src="../img/logo.png" alt=""></a>
   </nav>
   <div class="clear_box"></div>
   <div class="sign_form">
